<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/fioEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/hint_fio"
        android:inputType="text" />

    <EditText
        android:id="@+id/groupEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/hint_group"
        android:inputType="text" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/hint_age"
        android:inputType="number" />

    <Button
        android:id="@+id/progButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm"
        android:textSize="16sp"
        android:layout_marginTop="24dp" />

</LinearLayout>