<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_info"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/dayEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/hint_day"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/timeEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/hint_time"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/hint_comment"
            android:textSize="16sp" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:textSize="16sp"
            android:layout_marginTop="24dp" />

    </LinearLayout>

</FrameLayout>